--- a/client/index.html
+++ b/client/index.html
@@ -72,7 +72,7 @@
         <!-- Footer -->
         <footer>
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12 footer">
                     <p>Copyright &copy; Courtney Jong 2015</p>
                 </div>
             </div>
